--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,48 +1,69 @@
 #wrapper {
+    padding-left: 0;
+    transition: all 0.5s ease;
+}
+
+.mobile-menu {
+    display: none;
+}
+
+#wrapper.active {
     padding-left: 250px;
-    transition: all 0.4s ease 0s;
 }
 
 #sidebar-wrapper {
-    margin-left: -250px;
-    left: 250px;
-    width: 250px;
-    background: #000;
-    position: fixed;
-    height: 100%;
-    overflow-y: auto;
     z-index: 1000;
-    transition: all 0.4s ease 0s;
+    position: fixed;
+    left: 250px;
+    width: 0;
+    height: 100% !important;
+    margin-left: -250px;
+    overflow-y: auto;
+    background: #000;
+    transition: all 0.5s ease;
+}
+
+#wrapper.active #sidebar-wrapper {
+    width: 250px;
 }
 
 #page-content-wrapper {
     width: 100%;
+    position: absolute;
+    padding: 15px;
 }
+
+#wrapper.active #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
+}
+
+/* Sidebar Styles */
 
 .sidebar-nav {
     position: absolute;
     top: 0;
     width: 250px;
-    list-style: none;
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 
 .sidebar-nav li {
-    line-height: 40px;
     text-indent: 20px;
+    line-height: 40px;
 }
 
 .sidebar-nav li a {
-    color: #999999;
     display: block;
     text-decoration: none;
+    color: #999999;
 }
 
 .sidebar-nav li a:hover {
-    color: #fff;
-    background: rgba(255, 255, 255, 0.2);
     text-decoration: none;
+    color: #fff;
+    background: rgba(255,255,255,0.2);
 }
 
 .sidebar-nav li a:active,
@@ -52,8 +73,8 @@
 
 .sidebar-nav > .sidebar-brand {
     height: 65px;
-    line-height: 60px;
     font-size: 18px;
+    line-height: 60px;
 }
 
 .sidebar-nav > .sidebar-brand a {
@@ -65,51 +86,55 @@
     background: none;
 }
 
-.content-header {
-    height: 65px;
-    line-height: 65px;
-}
-
-.content-header h1 {
-    margin: 0;
-    margin-left: 20px;
-    line-height: 65px;
-    display: inline-block;
-}
-
-#menu-toggle {
-    display: none;
-}
-
-.inset {
-    padding: 20px;
-}
-
-@media (max-width: 767px) {
+@media(min-width:768px) {
     #wrapper {
+        padding-left: 250px;
+    }
+
+    #wrapper.active {
         padding-left: 0;
     }
 
     #sidebar-wrapper {
-        left: 0;
-    }
-
-    #wrapper.active {
-        position: relative;
-        left: 250px;
+        width: 250px;
     }
 
     #wrapper.active #sidebar-wrapper {
-        left: 250px;
-        width: 250px;
-        transition: all 0.4s ease 0s;
+        width: 0;
     }
 
-    #menu-toggle {
-        display: inline-block;
+    #page-content-wrapper {
+        padding: 20px;
+        position: relative;
     }
 
-    .inset {
-        padding: 15px;
+    #wrapper.active #page-content-wrapper {
+        position: relative;
+        margin-right: 0;
+    }
+}
+@media(max-width:600px) {
+    .mobile-menu {
+        display: block;
+    }
+
+    .navbar-custom {
+      height: 55px;
+      margin-bottom: 0;
+    }
+
+    .mobile-menu .navbar-brand {
+        float: right;
+        margin-right: 15px;
+    }
+
+    .mobile-menu .navbar-toggle {
+        float: left;
+        margin-left: 7px;
+        padding: 14px 20px;
+    }
+
+    #page-content-wrapper {
+        padding: 0 15px 15px 15px;
     }
 }
